﻿v1.1.4

Mechanic Timers
* New: Timer UI objects are now stagger pre-fetched and cached on start-up based on the maximum number of timers possible during one encounter.

Watchdog Diagnostics (temporary alpha addition)
* New: /kbmwdbuffs - Displays current session diagnostic data for Buff.Add/Remove handlers.
* New: /kbmwdbuffs all - Lists all history for saved sessions including current
* New: /kbmwdbuffs clear - Clears session saved history and current session data.
* New: /kbmwdavail - Displays current session diagnostic data for Unit.Availability handlers (all/clear as above).
* New: /kbmwdmain - Displays current session diagnostic data for System.Update.Begin handlers (all/clear as above).
* Fixed: Start-up error with Watchdog variable.
* Change: History will now only save up to 10 sessions for all diagnostics data.
* Change: Increased accuracy of Average times by 1 place.
* Change: Removed Average time calculations from the handlers, this is now calculated when calling the data via commands.

Infernal Dawn
* Ember Conclave
** New: Added Phase Tracking.
** New: Added Hard Mode detection.
** New: Added Alert and Timer for Dark Invocation.
** New: Added Enrage Timer.

----
v1.1.3

Infernal Dawn
* Warboss Drak
** Fixed: Final Phase error.

Primeval Feast
* Fixed: Atrophinius gains his missing title of Grandmaster.

German Translations
* Updated for Primeval Feast.

----
v1.1.2

System
* Change: Each Boss Mod will now catch any errors if KBM doesn't fully start for any reason. This will prevent it running and spamming errors.

Player Castbar
* Change: This will now default to disabled. Enable it via KBM > Global Options > Cast-bars > Enable Player Castbar
* Note: This will not effect existing settings.

RezMaster
* Change: Messages are now handled for both .Send and .Broadcast to account for any issues with the API (such as this week).

Version Messages
* Change: See RezMaster.

Mechanic Timers